--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -11,4 +11,21 @@
     </div>
 </div>
 
+<!-- category cards -->
+<div class="row">
+    {% for category in categories %}
+    <div class="col s12 m6 l3">
+      <div class="card grey">
+        <div class="card-content white-text">
+          <span class="card-title center-align">{{ category.category_name }}</span>
+        </div>
+        <div class="card-action">
+          <a href="#" class="btn-small green accent-3">Edit</a>
+          <a href="#" class="btn-small red accent-3">Delete</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+
 {% endblock %}
