--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -4,28 +4,28 @@
 <h3 class="green-text text-darken-4 center-align">Categories</h3>
 
 <div class="row">
-    <div class="col s12 center-align">
-        <a href="{{ url_for('add_category') }}" class="btn-large green lighten-1">
-            Add category  <i class="fas fa-square-plus right"></i>
-        </a>
-    </div>
+  <div class="col s12 center-align">
+    <a href="{{ url_for('add_category') }}" class="btn-large green lighten-1">
+      Add category <i class="fas fa-square-plus right"></i>
+    </a>
+  </div>
 </div>
 
 <!-- category cards -->
 <div class="row">
-    {% for category in categories %}
-    <div class="col s12 m6 l3">
-      <div class="card grey">
-        <div class="card-content white-text">
-          <span class="card-title center-align">{{ category.category_name }}</span>
-        </div>
-        <div class="card-action">
-          <a href="#" class="btn-small green accent-3">Edit</a>
-          <a href="#" class="btn-small red accent-3">Delete</a>
-        </div>
+  {% for category in categories %}
+  <div class="col s12 m6 l3">
+    <div class="card grey">
+      <div class="card-content white-text">
+        <span class="card-title center-align">{{ category.category_name }}</span>
+      </div>
+      <div class="card-action">
+        <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn-small green accent-3">Edit</a>
+        <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn-small red accent-3">Delete</a>
       </div>
     </div>
-    {% endfor %}
   </div>
+  {% endfor %}
+</div>
 
 {% endblock %}
