--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -3,4 +3,12 @@
 
 <h3 class="green-text text-darken-4 center-align">Tasks</h3>
 
+<div class="row">
+    <div class="col s12 center-align">
+        <a href="{{ url_for('add_task') }}" class="btn-large green lighten-1">
+            Add task <i class="fas fa-square-plus right"></i>
+        </a>
+    </div>
+</div>
+
 {% endblock %}
