--- a/taskmanager/templates/edit_task.html
+++ b/taskmanager/templates/edit_task.html
@@ -1,35 +1,39 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="green-text text-darken-4 center-align">New task</h3>
+<h3 class="green-text text-darken-4 center-align">Edit Task</h3>
 
 <div class="row card-panel grey lighten-4">
-    <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
-        <!-- task name -->
+    <form class="col s12" method="POST" action="{{ url_for('edit_task', task_id=task.id) }}">
+        <!-- category name -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fa-solid fa-pen prefix green-text text-darken-3 left"></i>
-                <input id="task_name" name="task_name" minlength="3" maxlength="20" type="text" class="validate"
-                    required>
+                <input id="task_name" name="task_name" value="{{ task.task_name }}" minlength="3" maxlength="20" type="text" class="validate" required>
                 <label for="task_name" class="green-text text-darken-3">Task Name</label>
             </div>
         </div>
-        <!-- task description -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fa-solid fa-pen prefix green-text text-darken-3 left"></i>
-                <textarea id="task_description" name="task_description" minlength="20" maxlength="100" type="text"
-                    class="validate materialize-textarea" required></textarea>
+                <textarea id="task_description" name="task_description" minlength="5" maxlength="100" type="text"
+                    class="validate materialize-textarea" required>
+                    {{- task.task_description.strip() -}}
+                </textarea>
                 <label for="task_description" class="green-text text-darken-3">Task Description</label>
             </div>
         </div>
         <div class="row">
-            <!-- switch -->
+            <!-- is_urgent Switch -->
             <div class="input-field col s6">
                 <div class="switch">
                     <i class="fas fa-exclamation-circle prefix green-text text-darken-4"></i>
                     <label for="is_urgent" class="valign-wrapper">
-                        <input id="is_urgent" name="is_urgent" type="checkbox">
+                        {% if task.is_urgent == True %}
+                            <input id="is_urgent" name="is_urgent" type="checkbox" checked>
+                        {% else %}
+                            <input id="is_urgent" name="is_urgent" type="checkbox">
+                        {% endif %}
                         <span class="lever"></span>
                         <h6 class="green-text text-darken-4">Urgent</h6>
                     </label>
@@ -38,7 +42,7 @@
             <!-- date due -->
             <div class="input-field col s6">
                 <i class="fa-regular fa-calendar-days prefix green-text text-darken-3 left"></i>
-                <input id="due_date" name="due_date" type="text" class="validate datepicker" required>
+                <input id="due_date" name="due_date" type="text" value="{{ task.due_date.strftime('%d %B %Y') }}" class="validate datepicker" required>
                 <label for="due_date" class="green-text text-darken-3">Due date</label>
             </div>
         </div>
@@ -47,9 +51,13 @@
             <div class="input-field col s12">
                 <i class="fa-solid fa-arrow-pointer prefix green-text text-darken-3 left"></i>
                 <select id="category_id" name="category_id" class="validate" required>
-                    <option value="" disabled selected>Choose Category</option>
+                    <option value="" disabled>Choose option</option>
                     {% for category in categories %}
-                    <option value="{{ category.id }}">{{ category.category_name }}</option>
+                        {% if category == task.category %}
+                            <option value="{{ category.id }}" selected>{{ category.category_name }}</option>
+                        {% else %}
+                            <option value="{{ category.id }}">{{ category.category_name }}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>
                 <label for="category_id" class="green-text text-darken-3">Select Category</label>
@@ -59,8 +67,11 @@
         <div class="row">
             <div class="col s12 center-align">
                 <button type="submit" class="btn-large green darken-3">
-                    Add Task
+                    Edit Task
                 </button>
+                <a href="{{ url_for('home') }}" class="btn-large grey">
+                    Cancel
+                </a>
             </div>
         </div>
     </form>
